# Bannon

./: (no preface) Off The Top Rope_ Life In Limbo Book 1 (book only no preface).txt  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .sync_hash_BANNON  .sync_hash_CODEDUMMY  000_BANNON_PRIME_DIRECTIVE.md  AAA_ARCHITECTURE_TARGET.md  AGENTS.md  AudioSynth.ts  BANNON_BRICKS.js  BANNON_CONTEXT.md  BANNON_v150.html  Book help idea Off the top rope improvements tips and honest feedback from claude.txt  CLAUDE.md  CharacterForge.ts  CharacterModelGen.ts  CloudPersistence.ts  CombatAI.ts  Cosmology.ts  DaemonCore.ts  FXRenderer.ts  FighterEvolution.ts  HEY_CLAUDE_READ_ME_FIRST.md  InputMatrix.ts  KinematicCore.ts  LICENSE.md  MANIFEST.md  MatchDirector.ts  OPEN_SOURCE_STACK.md  Off The Top Rope Book 2_ The Structural Collapse & The Tower of Babel .txt  Off The Top Rope Book 3_ The War of Warped Corruption.txt  Off The Top Rope Book 4_ Core Unlocked (1).txt  Off The Top Rope Book 4_ Core Unlocked pt 2.txt  Off The Top Rope Book 4_ Core Unlocked.txt  Off The Top Rope Book 5_ Level 99 (1).txt  Off The Top Rope Book 5_ Level 99 Pt. 2.txt  Off The Top Rope Book 5_ Level 99.txt  (+212 more)
.claude/agents/: audio_ai_subagent.md  bannon_dev_agent.md  camera_springboard_subagent.md  caw_generation_subagent.md  combat_subagent.md  crowd_audio_lod_subagent.md  environment_ai_subagent.md  fx_fluid_subagent.md  gnm_webui_subagent.md  master_linkage_subagent.md  match_logic_subagent.md  network_subagent.md  physics_subagent.md  rendering_subagent.md  softbody_hair_subagent.md  telemetry_visual_subagent.md  ui_subagent.md  weapon_audio_subagent.md
.github/workflows/: android.yml  autonomous_build.yml  build.yml  deploy.yml  deploy_app.yml  drive-sync.yml  eas_build_deploy.yml  guard.yml  integrity.yml  pages.yml
BlenderGoodies/: LICENSE.md
BlenderGoodies/ConversionAndRetargetScript/: Instructions.txt
Config/: DefaultEngine.ini
android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/app/: bannon-release.keystore  build.gradle
android_build/: AndroidManifest.xml  CMakeLists.txt  build.gradle
android_build/src/: native_activity.cpp
assets/audio/: Mars FMMG - Dio 2026-07-03 03_34.m4a  Mars FMMG - Narco 2026-07-02 05_05.m4a  Mars FMMG - Picadero 2026-07-03 00_01.m4a  Mars FMMG - Zumbando.m4a  Mars FMMG - bannon theme no Acapella 2026-07-17 19_11.m4a  bannon_theme.m4a  dbz.m4a  mars_japanese_denim.m4a  mars_obscuro.m4a
assets/dialogue/: bannon_dialogue.json  character_lines.json
assets/mdickie_extracted/: hard_time_iii_catalog.json  infinite_lives_catalog.json  wr3d_catalog.json
assets/mocap/: X Bot.fbx  (+24 more)
autonomous_payloads/: agent_setup.sh
blender-mcp-main/: README.md  pyproject.toml
blendforge/: Dockerfile  convert.py  package.json  worker.js
box3d-0.1.0/: README.md
canon/: 00_cast_and_world.md  01_book1_life_in_limbo.md  02_book2_structural_collapse.md  03_book3_war_of_warped_corruption.md  04_book4_core_unlocked.md  05a_book5_level99_part1.md  05b_book5_level99_part2.md  06_book6_kayfabe_is_real.md
config/: parserMappingRules.md
docs/: 2K26_caw_moveset_gaps.md  AI_STUDIO_GUARDRAILS.md  AI_WORKING_CONTRACT.md  CODEDUMMY_capability_spec.md  CODEDUMMY_merge_safety.md  CREATION_SUITE.md  DEPLOY.md  DNA_SCHEMA.md  EXTERNAL_REFS.md  FORGE_blueprint.md  GLB_shapekey_spec.md  GNM_OMNIVERSE_notes.md  GOD_WITHIN_mode.md  LYRA_ACCESS.md  LYRA_BASE.md  MDICKIE_ATTIRE_MAP.md  MDICKIE_BASES.md  MDICKIE_QUEUE.md  MOBILE_INSTALL.md  MOCAP_AUTOMATION.md  MODEL_GEN_STATUS.md  MODEL_QA.md  MODEL_RIGGING.md  PORT_MAP_native.md  SURROUNDING_GAME.md  UE_BRIDGE.md  bannonengine2_integration.md  controls_and_mechanics_spec.md  mocap_accuracy_plan.md
forge_server/: Dockerfile  README.md  app.py  requirements.txt
godmode/: .env.example  .gitignore  AGENTS.md  BANNON_AAA_v21_2K_mocap_2.html  BANNON_SWARM_BUILDER_v50_1.html  BIOMECHANICAL_SIMULATION_SPEC.md  Bannon.Modelfile  README.md  add_memory.cjs  add_memory_shemsuniverse.cjs  bannon.html  chat_error.txt  check_port.ts  compile-bridge.js  deps.txt  ecosystem.config.cjs  ecosystem.config.js  find-txt.cjs  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  fix-qc.cjs  fix.js  fix_qc_compiler.cjs  fix_qc_compiler2.cjs  fix_server.js  index.html  legal_asset_matcher.py  logs.txt  metadata.json  nginx.conf  nixpacks.toml  noop.cjs  orchestrator-core.ts  orchestrator.ts  package-lock.json  package.json  replace.ts  search.ts  seedMemory.cjs  (+16 more)
imports/: MANIFEST.md
living-nexus-android/: AGENTS.md
native/: CMakeLists.txt  README.md
native/include/: BannonPhysicsLaws.h  bannon_anim_bridge.h  bannon_arena.h  bannon_core.h  bannon_grapple.h  bannon_jolt.h  bannon_math.h  bannon_persona.h  bannon_ragdoll.h  bannon_referee.h  bannon_rig.h  bannon_solvers.h  bannon_strike.h  bannon_universe.h  bannon_weapon.h
native/src/: wrestler_state.cpp
native/tests/: test_anim_bridge.cpp  test_combat.cpp  test_core.cpp  test_persona.cpp  test_referee.cpp  test_rig.cpp  test_solvers.cpp  test_universe.cpp  test_weapon.cpp
public/: dummy.glb  index.html  robots.txt  sitemap.xml  sw.js
roadmap/: Evolution_Tracker.md
scripts/: audio_chunker.py  generate-sitemap.js  heal_clobber.cjs  stub_scan.cjs  tune_desperation.js  verify_integrity.cjs
server/: VoiceMapper.ts  agentRunner.ts  bannonLogic.ts  crowdReactionSystem.js  hitboxLogic.ts  local_tts_server.py  memory_manager.ts  voice_mapper.ts
src/: App.tsx  index.css  main.tsx  types.ts
unreal/: Bannon.uproject  CONVERSION.md  NativeAudioBridge.cpp  NativeAudioBridge.h  README.md
(+2107 files in other folders)
